allow vpn and access from new phone and laptop

--- a/firewall_zones/vyos_home/local/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_home/local/from-remote-tun-ipv4.yml
@@ -27,3 +27,8 @@
 - description: "Allow OSPF"
   action: "accept"
   protocol: "89"
+- description: Allow SERVICE-TALKERS access
+  action: accept
+  source:
+    group:
+      address_group: SERVICE-TALKERS-v4
