--- a/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
@@ -93,3 +93,8 @@
   protocol: tcp
   state:
     new: true
+- description: Allow SERVICE-TALKERS access
+  action: accept
+  source:
+    group:
+      address_group: SERVICE-TALKERS-v4
