trust cloudflare proxied traffic

--- a/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
@@ -32,6 +32,9 @@
     group:
       port_group: TRAEFIK-EXT
   protocol: tcp
+  source:
+    group:
+      network_group: CLOUDFLARE_IPS
 - action: accept
   description: Allow Factorio Traffic
   destination:
