--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -53,6 +53,24 @@ vyos_firewall_global__group:
       members:
         - address: 10.11.1.67 # valheim-forerunner.tswn.us
         - address: 10.11.1.68 # valheim-relic.tswn.us
+  network_group:
+    - name: CLOUDFLARE_IPS
+      members:
+        - address: 103.21.244.0/22
+        - address: 103.22.200.0/22
+        - address: 103.31.4.0/22
+        - address: 104.16.0.0/13
+        - address: 104.24.0.0/14
+        - address: 108.162.192.0/18
+        - address: 131.0.72.0/22
+        - address: 141.101.64.0/18
+        - address: 162.158.0.0/15
+        - address: 172.64.0.0/13
+        - address: 173.245.48.0/20
+        - address: 188.114.96.0/20
+        - address: 190.93.240.0/20
+        - address: 197.234.240.0/22
+        - address: 198.41.128.0/17
   port_group:
     - name: FACTORIO
       description: Ports used by the Factorio server.
