--- a/kustomization/components/traefik/deployment.yml
+++ b/kustomization/components/traefik/deployment.yml
@@ -42,6 +42,7 @@ spec:
             - --entrypoints.web.http.redirections.entrypoint.to=websecure
             - --entrypoints.websecure.address=:443
             - --entrypoints.websecure-ext.address=:8443
+            - --entrypoints.websecure-ext.forwardedHeaders.trustedIPs=103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17
             - --global.checknewversion=false
             - --metrics.prometheus=true
             - --metrics.prometheus.entryPoint=metrics
