be more lax for penpot with session cookies

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -167,6 +167,10 @@ session:
   cookies:
     - domain: tswn.us
       authelia_url: https://auth.tswn.us
+    - domain: lg-penpot.tswn.us
+      authelia_url: https://auth.tswn.us
+      inactivity: 60m
+      expiration: 4h
   redis:
     high_availability:
       sentinel_name: myMaster
