add required libonig-dev so wheels can be built

--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -9,6 +9,7 @@
   ansible.builtin.apt:
     name:
       - cron
+      - libonig-dev
       - python3-pip
       - python3-venv
       - software-properties-common
