allow sw-modern.js through authelia for home assistant

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -65,6 +65,7 @@ access_control:
         - ^/hacsfiles/.*$
         - ^/service_worker.js$
         - ^/static/.*$
+        - ^/sw-modern.js$
     - domain: immich.tswn.us
       networks:
         - home
