update home assistant allowed bpyass on home network

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -60,6 +60,7 @@ access_control:
       resources:
         - ^/.external_auth=.$
         - ^/api.*$
+        - ^/auth/authorize.*$
         - ^/auth/token.*$
         - ^/frontend_latest/.*$
         - ^/hacsfiles/.*$
