update home assistant allowed bypass on home network

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -61,6 +61,7 @@ access_control:
         - ^/.external_auth=.$
         - ^/api.*$
         - ^/auth/authorize.*$
+        - ^/auth/providers$
         - ^/auth/token.*$
         - ^/frontend_latest/.*$
         - ^/hacsfiles/.*$
