update home assistant allowed bypass on home network

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -60,9 +60,7 @@ access_control:
       resources:
         - ^/.external_auth=.$
         - ^/api.*$
-        - ^/auth/authorize.*$
-        - ^/auth/providers$
-        - ^/auth/token.*$
+        - ^/auth/.*$
         - ^/frontend_latest/.*$
         - ^/hacsfiles/.*$
         - ^/service_worker.js$
