add spoolman to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -233,6 +233,7 @@ bind_zones:
           - paperless.hogs
           - prometheus.hogs
           - smtp.hogs
+          - spoolman.hogs
           - tdarr.hogs
           - transmission.hogs
           - tvheadend.hogs
