do not automount service token when not needed

--- a/kustomization/components/ara/deployment.yml
+++ b/kustomization/components/ara/deployment.yml
@@ -13,6 +13,7 @@ spec:
       labels:
         app.kubernetes.io/name: ara
     spec:
+      automountServiceAccountToken: false
       containers:
         - name: ara
           env:
