--- a/kustomization/components/ubuntu-shell/pod.yml
+++ b/kustomization/components/ubuntu-shell/pod.yml
@@ -4,6 +4,7 @@ kind: Pod
 metadata:
   name: ubuntu-shell 
 spec:
+  automountServiceAccountToken: false
   containers:
   - image: ubuntu
     name: ubuntu
