--- a/kustomization/components/authelia/deployment.yml
+++ b/kustomization/components/authelia/deployment.yml
@@ -22,6 +22,7 @@ spec:
                     values:
                       - authelia
               topologyKey: kubernetes.io/hostname
+      automountServiceAccountToken: false
       enableServiceLinks: false
       containers:
         - name: authelia
