--- a/kustomization/components/esphome/statefulset.yml
+++ b/kustomization/components/esphome/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: esphome
     spec:
+      automountServiceAccountToken: false
       containers:
         - env:
             - name: ESPHOME_DASHBOARD_USE_PING
