--- a/kustomization/components/factorio/statefulset.yml
+++ b/kustomization/components/factorio/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: factorio
     spec:
+      automountServiceAccountToken: false
       containers:
         - env:
             - name: FSM_AUTOSTART
