--- a/kustomization/components/frigate/statefulset.yml
+++ b/kustomization/components/frigate/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: frigate
     spec:
+      automountServiceAccountToken: false
       containers:
         - image: ghcr.io/blakeblackshear/frigate:stable
           livenessProbe:
