--- a/kustomization/components/homeassistant/statefulset.yml
+++ b/kustomization/components/homeassistant/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: homeassistant
     spec:
+      automountServiceAccountToken: false
       containers:
         - env:
             - name: DEFAULT_WORKSPACE
