--- a/kustomization/components/jellyfin/statefulset.yml
+++ b/kustomization/components/jellyfin/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: jellyfin
     spec:
+      automountServiceAccountToken: false
       containers:
         - image: jellyfin/jellyfin
           name: jellyfin
