--- a/kustomization/components/manyfold/statefulset.yml
+++ b/kustomization/components/manyfold/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: manyfold
     spec:
+      automountServiceAccountToken: false
       containers:
         - env:
             - name: PGID
