--- a/kustomization/components/mosquitto/statefulset.yml
+++ b/kustomization/components/mosquitto/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: mosquitto
     spec:
+      automountServiceAccountToken: false
       containers:
         - image: eclipse-mosquitto
           name: mosquitto
