--- a/kustomization/components/navidrome/statefulset.yml
+++ b/kustomization/components/navidrome/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: navidrome
     spec:
+      automountServiceAccountToken: false
       containers:
         - env:
             - name: ND_ADDRESS
