--- a/kustomization/components/proton-bridge/statefulset.yml
+++ b/kustomization/components/proton-bridge/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: proton-bridge
     spec:
+      automountServiceAccountToken: false
       containers:
         - image: shenxn/protonmail-bridge
           name: proton-bridge
