--- a/kustomization/components/tdarr/deployment.yml
+++ b/kustomization/components/tdarr/deployment.yml
@@ -15,6 +15,7 @@ spec:
       labels:
         app.kubernetes.io/name: tdarr-node
     spec:
+      automountServiceAccountToken: false
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
