--- a/kustomization/components/unifi-network-application/statefulset.yml
+++ b/kustomization/components/unifi-network-application/statefulset.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: unifi-network-application
     spec:
+      automountServiceAccountToken: false
       containers:
         - image: mongo
           lifecycle:
