--- a/kustomization/components/vector-metrics-scraper/deployment.yml
+++ b/kustomization/components/vector-metrics-scraper/deployment.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app.kubernetes.io/name: vector-metrics-scraper
     spec:
+      automountServiceAccountToken: false
       containers:
         - args:
             - --config-dir
