Use a better fix for Home Assistant issue

--- a/kustomization/components/homeassistant/statefulset.yml
+++ b/kustomization/components/homeassistant/statefulset.yml
@@ -71,8 +71,8 @@ spec:
               name: homeassistant-config
         - env:
             # Short-term workaround as highlighted in https://github.com/home-assistant/core/issues/127966
-            - name: PYTHONPATH
-              value: /usr/local/lib/python3.13:/config/deps
+            - name: PYTHONUSERBASE
+              value: /config/deps
           image: ghcr.io/home-assistant/home-assistant
           livenessProbe:
             httpGet:
