Add a devcontainer with ansible ready to go

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,15 @@
     {
       "customType": "regex",
       "fileMatch": [
+        "^.devcontainer/devcontainer.json$"
+      ],
+      "matchStrings": [
+        "\\srenovate:\\s+datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s*\"version\":\\s+\"(?<currentValue>.*?)\""
+      ]
+    },
+    {
+      "customType": "regex",
+      "fileMatch": [
         "^Earthfile$"
       ],
       "matchStrings": [
