move things to the Dockerfile to prep for caching of the devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,4 +6,9 @@ RUN  apt-get update \
     && apt-get install -y --no-install-recommends \
     libssh-dev
 
+COPY requirements.txt requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
+COPY requirements.yml requirements.yml
+RUN ansible-galaxy collection install --upgrade -r requirements.yml
+RUN ansible-galaxy role install --force-with-deps -p external_roles -r requirements.yml
