--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "ansible-playbooks",
     "build": {
+        "context": "..",
         "dockerfile": "Dockerfile"
     },
     "customizations": {
