fix renovate in devcontainer

--- a/renovate.json
+++ b/renovate.json
@@ -14,7 +14,7 @@
     {
       "customType": "regex",
       "fileMatch": [
-        "^Earthfile$"
+        "(^|/|\\.)(Docker|Earth)file$"
       ],
       "matchStrings": [
         "#\\s*renovate:\\s*datasource=(?<datasource>.*?)\\s+depName=(?<depName>.*?)(\\s+versioning=(?<versioning>.*?))?\\s+ARG\\s+.+_VERSION=(?<currentValue>.*?)\\s"
