--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,8 +3,11 @@ ARG PYTHON_VERSION=3.13
 FROM mcr.microsoft.com/devcontainers/python:1-${PYTHON_VERSION}
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    libssh-dev
+  && apt-get install -y --no-install-recommends \
+    libssh-dev \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /tmp
 COPY requirements.txt requirements.txt
 RUN pip3 install --no-cache-dir -r requirements.txt
