--- a/kustomization/overlays/prod/dns/service.yml
+++ b/kustomization/overlays/prod/dns/service.yml
@@ -2,9 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kube-vip.io/loadbalancerIPs: 10.11.1.66
   name: bind9-service
 spec:
-  loadBalancerIP: 10.11.1.66
   ports:
     - protocol: TCP
       port: 53
