--- a/kustomization/overlays/prod/lg/patches/set_gitea_ssh_service.yml
+++ b/kustomization/overlays/prod/lg/patches/set_gitea_ssh_service.yml
@@ -2,9 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kube-vip.io/loadbalancerIPs: 10.11.1.70
   name: this-is-ignored-but-is-required
 spec:
-  loadBalancerIP: 10.11.1.70
   ports:
     - name: ssh
       port: 2222
