--- a/kustomization/overlays/prod/paperless/patches/set_samba_address.yml
+++ b/kustomization/overlays/prod/paperless/patches/set_samba_address.yml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kube-vip.io/loadbalancerIPs: 10.11.1.32
   name: this-is-ignored-but-is-required
-spec:
-  loadBalancerIP: 10.11.1.32
+spec: {}
