--- a/kustomization/overlays/prod/traefik/patches/set_traefik_service_ip.yml
+++ b/kustomization/overlays/prod/traefik/patches/set_traefik_service_ip.yml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kube-vip.io/loadbalancerIPs: 10.11.1.64
   name: this-is-ignored-but-is-required
-spec:
-  loadBalancerIP: 10.11.1.64
+spec: {}
