--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,8 @@
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
         "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {
+            // renovate: datasource=github-releases depName=helm/helm
+            "helm": "3.16.4",
             // renovate: datasource=github-releases depName=kubernetes/kubernetes
             "version": "1.31.4"
         },
