--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,10 @@
             // renovate: datasource=github-releases depName=argoproj/argo-cd
             "version": "2.13.2"
         },
+        "ghcr.io/dhoeric/features/hadolint:1": {
+            // renovate: datasource=github-releases depName=hadolint/hadolint
+            "version": "2.12.0"
+        },
         "ghcr.io/earthly/devcontainer-features/earthly:1": {
             "bootstrap": true,
             // renovate: datasource=docker depName=earthly/earthly
