Migrate kustomize-build from Earthly to just

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,4 +31,5 @@ jobs:
           refFilterForPush: refs/heads/main
           runCmd: |
             earthly +lint
+            just kustomize-build
             just renovate-validate
