--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
           push: filter
           refFilterForPush: refs/heads/main
           runCmd: |
-            earthly +lint
             just hadolint
             just kustomize-build
             just renovate-validate
+            just shellcheck
