Add just check and fix
This also runs `just justfix` on the existing file to clean up issues.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,8 @@ jobs:
           push: filter
           refFilterForPush: refs/heads/main
           runCmd: |
+            just justcheck
+
             just hadolint
             just kustomize-build
             just renovate-validate
