Never push the devcontainer in the lint job

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -42,6 +42,7 @@ jobs:
           env: |
             CI=1
           imageName: ghcr.io/${{ github.repository }}-devcontainer
+          push: never
           runCmd: |
             just justcheck
 
