--- a/plays/dns/tasks/zones.yml
+++ b/plays/dns/tasks/zones.yml
@@ -6,12 +6,12 @@
 #  Lightly modified to not do actions that make no sense when running just to generate a config.
 #
 - name: Set list of all host IP addresses
-  set_fact:
+  ansible.builtin.set_fact:
     host_all_addresses: "{{ ansible_all_ipv4_addresses | union(ansible_all_ipv6_addresses) }}"
   tags: bind
 
 - name: Read forward zone hashes
-  shell: 'grep -s "^; Hash:" {{ bind_zone_dir }}/{{ item.name }} || true'
+  ansible.builtin.shell: 'grep -s "^; Hash:" {{ bind_zone_dir }}/{{ item.name }} || true'
   changed_when: false
   check_mode: false
   register: forward_hashes_temp
@@ -23,7 +23,7 @@
   tags: bind
 
 - name: Create dict of forward hashes
-  set_fact:
+  ansible.builtin.set_fact:
     forward_hashes: "{{ forward_hashes|default([]) + [{'hash': item.stdout|default(), 'name': item.item.name}] }}"
   with_items:
     - "{{ forward_hashes_temp.results }}"
@@ -33,7 +33,7 @@
   tags: bind
 
 - name: Read reverse ipv4 zone hashes
-  shell: "grep -s \"^; Hash:\" {{ bind_zone_dir }}/{{ ('.'.join(item.1.replace(item.1+'.','').split('.')[::-1])) }}.in-addr.arpa || true"
+  ansible.builtin.shell: "grep -s \"^; Hash:\" {{ bind_zone_dir }}/{{ ('.'.join(item.1.replace(item.1+'.','').split('.')[::-1])) }}.in-addr.arpa || true"
   changed_when: false
   check_mode: false
   register: reverse_hashes_temp
@@ -48,7 +48,7 @@
   tags: bind
 
 - name: Create dict of reverse hashes
-  set_fact:
+  ansible.builtin.set_fact:
     reverse_hashes: "{{ reverse_hashes|default([]) + [ {'hash': item.0.stdout|default(), 'network': item.1} ] }}"
   with_subelements:
     - "{{ reverse_hashes_temp.results }}"
@@ -59,7 +59,7 @@
   tags: bind
 
 - name: Read reverse ipv6 zone hashes
-  shell: "grep -s \"^; Hash:\" {{ bind_zone_dir }}/{{ (item.1 | ipaddr('revdns'))[-(9+(item.1|regex_replace('^.*/','')|int)//2):-1] }} || true"
+  ansible.builtin.shell: "grep -s \"^; Hash:\" {{ bind_zone_dir }}/{{ (item.1 | ipaddr('revdns'))[-(9+(item.1|regex_replace('^.*/','')|int)//2):-1] }} || true"
   changed_when: false
   check_mode: false
   register: reverse_hashes_ipv6_temp
@@ -74,7 +74,7 @@
   tags: bind
 
 - name: Create dict of reverse ipv6 hashes
-  set_fact:
+  ansible.builtin.set_fact:
     reverse_hashes_ipv6: "{{ reverse_hashes_ipv6|default([]) + [ {'hash': item.0.stdout|default(), 'network': item.1} ] }}"
   with_subelements:
     - "{{ reverse_hashes_ipv6_temp.results }}"
@@ -85,7 +85,7 @@
   tags: bind
 
 - name: Create forward lookup zone file
-  template:
+  ansible.builtin.template:
     src: "{{ lookup('first_found', template_paths) }}"
     dest: "{{ bind_zone_dir }}/{{ item.name }}"
   with_items:
@@ -102,7 +102,7 @@
     template_paths: "{{ roles_paths | product(['/bertvv.bind/templates/bind_zone.j2']) | map('join', '') }}"
 
 - name: Create reverse lookup zone file
-  template:
+  ansible.builtin.template:
     src: "{{ lookup('first_found', template_paths) }}"
     dest: "{{ bind_zone_dir }}/{{ ('.'.join(item.1.replace(item.1+'.','').split('.')[::-1])) }}.in-addr.arpa"
   with_subelements:
@@ -122,7 +122,7 @@
     template_paths: "{{ roles_paths | product(['/bertvv.bind/templates/reverse_zone.j2']) | map('join', '') }}"
 
 - name: Create reverse IPv6 lookup zone file
-  template:
+  ansible.builtin.template:
     src: "{{ lookup('first_found', template_paths) }}"
     dest: "{{ bind_zone_dir }}/{{ (item.1 | ipaddr('revdns'))[-(9+(item.1|regex_replace('^.*/','')|int)//2):-1] }}"
   with_subelements:
