--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Run lint
+      - name: Run quick-lint
         uses: devcontainers/ci@v0.3.1900000349
         with:
           cacheFrom: ghcr.io/${{ github.repository }}-devcontainer
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Run lint
+      - name: Run kustomize-build
         uses: devcontainers/ci@v0.3.1900000349
         with:
           cacheFrom: ghcr.io/${{ github.repository }}-devcontainer
